@@ -1,0 +1,42 @@
+package SPVM::Net::SSLeay::EVP_PKEY;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::EVP_PKEY - EVP_PKEY Data Structure in OpenSSL
+
+=head1 Description
+
+Net::SSLeay::EVP_PKEY class in L<SPVM> represents EVP_PKEY data structure in OpenSSL.
+
+=head1 Usage
+
+  use Net::SSLeay::EVP_PKEY;
+
+=head1 Class Methods
+
+
+
+=head1 Instance Methods
+
+
+
+=head1 See Also
+
+=over 2
+
+=item * L<Net::SSLeay::EVP|SPVM::Net::EVP>
+
+=item * L<Net::SSLeay|SPVM::Net::SSLeay>
+
+=back
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
