@@ -13,6 +13,7 @@
     * Add Net::SSLeay::X509#pubkey_digest method.
     * Add Net::SSLeay#get_certificate method.
     * Add Net::SSLeay::X509_VERIFY_PARAM#set_flags method.
+    * Add Net::SSLeay::EVP_PKEY class.
 0.010 2024-11-11
   [New Features]
     * Add Net::SSLeay::BIO#new_file method.
